--- a/index.html
+++ b/index.html
@@ -235,10 +235,10 @@
 	  }
 	  .FRflag {
 	    width: 57px;
-		cursor: not-allowed;
 	  }
 	  .GBflag {
 	    width: 57px;
+		cursor: not-allowed;
 	  }
     </style>
 </head>
@@ -252,9 +252,9 @@
 	
 		<div class="Flag">
 		<p class="LG">Choose language :</p>
-		<img class="FRflag" src="FR.png" alt="Drapeau Français" title="Vous êtes déjà sur la langue FR."/>
-		<a href="https://MYTOTO.ORG22"><img class="GBflag" src="GB.png" alt="Great Britain's Flag" title="Change for English language."/></a>
-		</div><!--		target="blank_"		-->
+		<a href="https://boby1717.github.io/bonplan.github.io/"><img class="FRflag" src="FR.png" alt="Drapeau Français" title="Changer pour la langue FR."/></a>
+		<img class="GBflag" src="GB.png" alt="Great Britain's Flag" title="You are in EN language"/>
+		</div>
 		
         <h2>Bienvenue dans mes bons plans parrainages, promotions, opportunités and more 🔥</h2>
         <button onclick="surprise()">Mes bonnes affaires !</button>
