--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bons plans 🔥</title>
+    <title>Good Deals 🔥</title>
     <link rel="icon" type="image/ico" href="favicon.ico">
     <style>
       * {
@@ -245,19 +245,19 @@
 
 <body>
     <header class="header">
-        <h1>Yo, Bienvenue ! 🔥</h1>
+        <h1>Yo, Welcome ! 🔥</h1>
     </header>
 
     <section class="hero">
 	
 		<div class="Flag">
-		<p class="LG">Choose language :</p>
+		<p class="LG">Changer de langue :</p>
 		<a href="https://boby1717.github.io/bonplan.github.io/"><img class="FRflag" src="FR.png" alt="Drapeau Français" title="Changer pour la langue FR."/></a>
 		<img class="GBflag" src="GB.png" alt="Great Britain's Flag" title="You are in EN language"/>
 		</div>
 		
-        <h2>Bienvenue dans mes bons plans parrainages, promotions, opportunités and more 🔥</h2>
-        <button onclick="surprise()">Mes bonnes affaires !</button>
+        <h2>Welcome to my tips on referrals, promotions, opportunities and more 🔥</h2>
+        <button onclick="surprise()">My good deals !</button>
     </section>
 
     <div id="ancre"></div>
@@ -267,14 +267,14 @@
         <div class="card">
             <div class="card-inner">
                 <div class="card-front">
-                    <p class="p-inner">Parrainage Winamax 🔞</p>
+                    <p class="p-inner">Winamax sponsorship 🔞</p>
                     <img class="Wina-inner" src="Wina.jpg" alt="Winamax">
                 </div>
                 <div class="card-back">
                     <h3>Winamax 🔞</h3>
-                    <p>Paris sportifs, poker.<br><br>
-                       Ton premier pari remboursé en cash s’il est perdant (jusqu'à 100 €). Jusqu'à 15€ en ticket Expresso + bonus de 20€.<br><br>
-                       <a href="https://www.winamax.fr/parrain?code=COBVFH">Ça me plait !</a></p>
+                    <p>Sports betting, poker.<br><br>
+                       Your first bet refunded in cash if it loses (up to 100€). Up to £15 in Expresso tickets + 20€ bonus.<br><br>
+                       <a href="https://www.winamax.fr/parrain?code=COBVFH">I like it !</a></p>
                 </div>
             </div>
         </div>
