--- a/index.html
+++ b/index.html
@@ -267,13 +267,13 @@
         <div class="card">
             <div class="card-inner">
                 <div class="card-front">
-                    <p class="p-inner">Winamax sponsorship 🔞</p>
+                    <p class="p-inner">Winamax sponsorship🔞</p>
                     <img class="Wina-inner" src="Wina.jpg" alt="Winamax">
                 </div>
                 <div class="card-back">
                     <h3>Winamax 🔞</h3>
                     <p>Sports betting, poker.<br><br>
-                       Your first bet refunded in cash if it loses (up to 100€). Up to £15 in Expresso tickets + 20€ bonus.<br><br>
+                       Your first bet refunded in cash if it loses (up to 100€). Up to 15€ in Expresso tickets + 20€ bonus.<br><br>
                        <a href="https://www.winamax.fr/parrain?code=COBVFH">I like it !</a></p>
                 </div>
             </div>
