--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     <section class="hero">
 	
 		<div class="Flag">
-		<p class="LG">Changer de langue :</p>
+		<p class="LG">Choose language :</p>
 		<a href="https://boby1717.github.io/bonplan.github.io/"><img class="FRflag" src="FR.png" alt="Drapeau Français" title="Changer pour la langue FR."/></a>
 		<img class="GBflag" src="GB.png" alt="Great Britain's Flag" title="You are in EN language"/>
 		</div>
