--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 	
 		<div class="Flag">
 		<p class="LG">Choose language :</p>
-		<a href="https://boby1717.github.io/bonplan.github.io/"><img class="FRflag" src="FR.png" alt="Drapeau Français" title="Changer pour la langue FR."/></a>
+		<a href="https://boby1717.github.io/bons-plans/"><img class="FRflag" src="FR.png" alt="Drapeau Français" title="Changer pour la langue FR."/></a>
 		<img class="GBflag" src="GB.png" alt="Great Britain's Flag" title="You are in EN language"/>
 		</div>
 		
