--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
     </section>
 
     <footer>
-        <p>Fait avec 💪 par Grok, ton IA préférée, pour un bro qui déchire ! Photo d'illustration par <a href="https://unsplash.com/fr/@krakenimages?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">krakenimages</a> sur <a href="https://unsplash.com/fr/photos/homme-en-chemise-blanche-assis-a-cote-dune-femme-en-chemise-noire-a-manches-longues-376KN_ISplE?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+        <p>Made with 💪 by Grok, your favourite AI, for a bro who rocks! Illustrative photo by <a href="https://unsplash.com/fr/@krakenimages?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">krakenimages</a> on <a href="https://unsplash.com/fr/photos/homme-en-chemise-blanche-assis-a-cote-dune-femme-en-chemise-noire-a-manches-longues-376KN_ISplE?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
     </footer>
 
     <script>
