--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 		}
       }
 
-      .Wina-inner {
+      .Wina-inner, .Bin-inner {
         width: 220px;
       }
 
@@ -278,13 +278,19 @@
                 </div>
             </div>
         </div>
-        <!-- Carte 2 -->
+        <!-- Carte 2 Referral Code, Referral Link -->
         <div class="card">
             <div class="card-inner">
-                <div class="card-front"></div>
+                <div class="card-front">
+                    <p class="p-inner">Binance sponsorship 🪙</p>
+                    <img class="Bin-inner" src="Binance.jpg" alt="Binance">
+				</div>
                 <div class="card-back">
-                    <h3>Jane Smith</h3>
-                    <p>Développeuse Web<br>jane.smith@example.com<br>+33 6 98 76 54 32</p>
+                    <h3>Binance 🪙</h3>
+                    <p>Crypto Exchange.<br><br>
+					Refer friends to purchase crypto worth over $50, and you will receive a trading fee rebate voucher worth up to $100 within 48 hours<br><br>
+					<a href="https://www.binance.com/activity/referral-entry/CPA?ref=CPA_0093XNFSRG">Let's go cryptos !</a>
+					</p>
                 </div>
             </div>
         </div>
