--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           font-size: 1em;
         }
         .cards-section {
-          margin: 85px auto 0 auto;
+          margin: 55px auto 0 auto;
           grid-template-columns: repeat(auto-fit, minmax(246px, 1fr));
         }
         .card-front {
@@ -268,7 +268,7 @@
             <div class="card-inner">
                 <div class="card-front">
                     <p class="p-inner">Winamax sponsorship🔞</p>
-                    <img class="Wina-inner" src="Wina.jpg" alt="Winamax">
+                    <img class="Wina-inner" src="Wina.jpg" alt="Winamax image">
                 </div>
                 <div class="card-back">
                     <h3>Winamax 🔞</h3>
@@ -283,13 +283,13 @@
             <div class="card-inner">
                 <div class="card-front">
                     <p class="p-inner">Binance sponsorship 🪙</p>
-                    <img class="Bin-inner" src="Binance.jpg" alt="Binance">
+                    <img class="Bin-inner" src="Binance.jpg" alt="Binance image">
 				</div>
                 <div class="card-back">
                     <h3>Binance 🪙</h3>
                     <p>Crypto Exchange.<br><br>
-					Refer friends to purchase crypto worth over $50, and you will receive a trading fee rebate voucher worth up to $100 within 48 hours<br><br>
-					<a href="https://www.binance.com/activity/referral-entry/CPA?ref=CPA_0093XNFSRG">Let's go cryptos !</a>
+					   Refer friends to purchase crypto worth over $50, and you will receive a trading fee rebate voucher worth up to $100 within 48 hours<br><br>
+					   <a href="https://www.binance.com/activity/referral-entry/CPA?ref=CPA_0093XNFSRG">Let's go cryptos !</a>
 					</p>
                 </div>
             </div>
