--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 		}
       }
 
-      .Wina-inner, .Bin-inner {
+      .Wina-inner, .Bin-inner, .Bours-inner, .Revol-inner {
         width: 220px;
       }
 
@@ -273,7 +273,7 @@
                 <div class="card-back">
                     <h3>Winamax 🔞</h3>
                     <p>Sports betting, poker.<br><br>
-                       Your first bet refunded in cash if it loses (up to 100€). Up to 15€ in Expresso tickets + 20€ bonus.<br><br>
+                       Your first bet refunded in cash if it loses (up to €100). Up to €15 in Expresso tickets + €20 bonus.<br><br>
                        <a href="https://www.winamax.fr/parrain?code=COBVFH">I like it !</a></p>
                 </div>
             </div>
@@ -297,20 +297,32 @@
         <!-- Carte 3 -->
         <div class="card">
             <div class="card-inner">
-                <div class="card-front"></div>
+                <div class="card-front">
+                    <p class="p-inner">Boursobank support 🏦</p>
+                    <img class="Bours-inner" src="Boursobank.jpg" alt="Boursobank Image">
+				</div>
                 <div class="card-back">
-                    <h3>Mike Johnson</h3>
-                    <p>Photographe<br>mike.j@example.com<br>+33 6 45 67 89 01</p>
+                    <h3>Boursobank 🏦</h3>
+                    <p>Online banking.<br><br>
+                       Up to €200 if you are opening an account for the first time and making your first deposit. First subscription to EasyMove banking mobility service.<br><br>
+					   <a href="https://bour.so/p/LcFi0XV6Q2S">So cool !</a>
+					</p>
                 </div>
             </div>
         </div>
         <!-- Carte 4 -->
         <div class="card">
             <div class="card-inner">
-                <div class="card-front"></div>
+                <div class="card-front">
+                    <p class="p-inner">Revolut sponsorship 🏦</p>
+                    <img class="Revol-inner" src="Revolut.jpg" alt="Revolut Image">
+				</div>
                 <div class="card-back">
-                    <h3>Anna Lee</h3>
-                    <p>Illustratrice<br>anna.lee@example.com<br>+33 6 23 45 67 89</p>
+                    <h3>Revolut 🏦</h3>
+                    <p>Online banking.<br><br>
+                       Up to €200. Register and verify your identity. Add money. Make 3 purchases of at least €5. Order a physical card.<br><br>
+					   <a href="https://revolut.com/referral/?referral-code=e18ar19ch49!AUG2-25-VR-FR-AE&geo-redirect">Easy !</a>
+					</p>
                 </div>
             </div>
         </div>
