--- a/index.html
+++ b/index.html
@@ -329,63 +329,43 @@
         <!-- Carte 5 -->
         <div class="card">
             <div class="card-inner">
-                <div class="card-front"></div>
+                <div class="card-front">
+				</div>
                 <div class="card-back">
-                    <h3>Chris Brown</h3>
-                    <p>Vidéaste<br>chris.brown@example.com<br>+33 6 78 90 12 34</p>
                 </div>
             </div>
         </div>
         <!-- Carte 6 -->
         <div class="card">
             <div class="card-inner">
-                <div class="card-front"></div>
+                <div class="card-front">
+				</div>
                 <div class="card-back">
-                    <h3>Laura White</h3>
-                    <p>Consultante Marketing<br>laura.w@example.com<br>+33 6 56 78 90 12</p>
                 </div>
             </div>
         </div>
         <!-- Carte 7 -->
         <div class="card">
             <div class="card-inner">
-                <div class="card-front"></div>
+                <div class="card-front">
+				</div>
                 <div class="card-back">
-                    <h3>Tom Black</h3>
-                    <p>Développeur Mobile<br>tom.black@example.com<br>+33 6 34 56 78 90</p>
                 </div>
             </div>
         </div>
         <!-- Carte 8 -->
         <div class="card">
             <div class="card-inner">
-                <div class="card-front"></div>
+                <div class="card-front">
+				</div>
                 <div class="card-back">
-                    <h3>Emma Green</h3>
-                    <p>Artiste 3D<br>emma.green@example.com<br>+33 6 12 34 56 78</p>
                 </div>
             </div>
         </div>
         <!-- Carte 9 -->
-        <div class="card">
-            <div class="card-inner">
-                <div class="card-front"></div>
-                <div class="card-back">
-                    <h3>Lucas Grey</h3>
-                    <p>Sound Designer<br>lucas.grey@example.com<br>+33 6 89 01 23 45</p>
-                </div>
-            </div>
-        </div>
+
         <!-- Carte 10 -->
-        <div class="card">
-            <div class="card-inner">
-                <div class="card-front"></div>
-                <div class="card-back">
-                    <h3>Sophia Blue</h3>
-                    <p>UX Designer<br>sophia.blue@example.com<br>+33 6 67 89 01 23</p>
-                </div>
-            </div>
-        </div>
+
     </section>
 
     <footer>
