--- a/index.html
+++ b/index.html
@@ -320,8 +320,8 @@
                 <div class="card-back">
                     <h3>Revolut 🏦</h3>
                     <p>Online banking.<br><br>
-                       Up to €200. Register and verify your identity. Add money. Make 3 purchases of at least €5. Order a physical card.<br><br>
-					   <a href="https://revolut.com/referral/?referral-code=e18ar19ch49!AUG2-25-VR-FR-AE&geo-redirect">Easy !</a>
+                       Up to €80. Register and verify your identity. Add and spend €50 (excluding online payments). Order a physical card.<br><br>
+					   <a href="https://revolut.com/referral/?referral-code=e18ar19ch49!SEP1-25-AR-SDIPTB14-H1-SDTR&geo-redirect">Easy !</a>
 					</p>
                 </div>
             </div>
