--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                     <h3>Revolut 🏦</h3>
                     <p>Online banking.<br><br>
                        Up to €80. Register and verify your identity. Add and spend €50 (excluding online payments). Order a physical card.<br><br>
-					   <a href="https://revolut.com/referral/?referral-code=e18ar19ch49!SEP1-25-AR-SDIPTB14-H1-SDTR&geo-redirect">Easy !</a>
+					   <a href="https://revolut.com/referral/?referral-code=e18ar19ch49">Easy !</a>
 					</p>
                 </div>
             </div>
