--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <div class="card-back">
                     <h3>Winamax 🔞</h3>
                     <p>Sports betting, poker.<br><br>
-                       Your first bet refunded in cash if it loses (up to €100). Up to €15 in Expresso tickets + €20 bonus.<br><br>
+                       Your first bet refunded in cash if it loses (up to €100). Up to €15 in Expresso tickets + €20 bonus. Code = COBVFH<br><br>
                        <a href="https://www.winamax.fr/parrain?code=COBVFH">I like it !</a></p>
                 </div>
             </div>
