--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 		}
       }
 
-      .Wina-inner, .Bin-inner, .Bours-inner, .Revol-inner {
+      .Wina-inner, .Bin-inner, .Bours-inner, .Revol-inner, .️Poker-inner {
         width: 220px;
       }
 
@@ -274,7 +274,7 @@
                     <h3>Winamax 🔞</h3>
                     <p>Sports betting, poker.<br><br>
                        Your first bet refunded in cash if it loses (up to €100). Up to €15 in Expresso tickets + €20 bonus. Code = COBVFH<br><br>
-                       <a href="https://www.winamax.fr/parrain?code=COBVFH">I like it !</a></p>
+                       <a href="https://www.winamax.fr/parrain?code=COBVFH" target="_blank">I like it !</a></p>
                 </div>
             </div>
         </div>
@@ -289,7 +289,7 @@
                     <h3>Binance 🪙</h3>
                     <p>Crypto Exchange.<br><br>
 					   Refer friends to purchase crypto worth over $50, and you will receive a trading fee rebate voucher worth up to $100 within 48 hours<br><br>
-					   <a href="https://www.binance.com/activity/referral-entry/CPA?ref=CPA_0093XNFSRG">Let's go cryptos !</a>
+					   <a href="https://www.binance.com/activity/referral-entry/CPA?ref=CPA_0093XNFSRG" target="_blank">Let's go cryptos !</a>
 					</p>
                 </div>
             </div>
@@ -305,7 +305,7 @@
                     <h3>Boursobank 🏦</h3>
                     <p>Online banking.<br><br>
                        Up to €200 if you are opening an account for the first time and making your first deposit. First subscription to EasyMove banking mobility service.<br><br>
-					   <a href="https://bour.so/p/LcFi0XV6Q2S">So cool !</a>
+					   <a href="https://bour.so/p/LcFi0XV6Q2S" target="_blank">So cool !</a>
 					</p>
                 </div>
             </div>
@@ -321,7 +321,7 @@
                     <h3>Revolut 🏦</h3>
                     <p>Online banking.<br><br>
                        Up to €80. Register and verify your identity. Add and spend €50 (excluding online payments). Order a physical card.<br><br>
-					   <a href="https://revolut.com/referral/?referral-code=e18ar19ch49">Easy !</a>
+					   <a href="https://revolut.com/referral/?referral-code=e18ar19ch49" target="_blank">Easy !</a>
 					</p>
                 </div>
             </div>
@@ -330,8 +330,15 @@
         <div class="card">
             <div class="card-inner">
                 <div class="card-front">
+					<p class="p-inner">Poker♠️ Cards♣️</p>
+					<img class="️Poker-inner" src="Poker_Cards.jpg" alt="Image ️Poker ️Cards">
 				</div>
                 <div class="card-back">
+                    <h3>Poker♥️ Cards♦️</h3>
+                    <p>Online help.<br><br>
+                       Web page to help you evaluate your chances with your hand.<br><br>
+					   <a href="https://boby1717.github.io/poker/" target="_blank">Thank you 🙏</a>
+					</p>
                 </div>
             </div>
         </div>
